--- a/captcha-java-sdk/pom.xml
+++ b/captcha-java-sdk/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.touclick.captcha</groupId>
 	<artifactId>java-sdk</artifactId>
-	<version>1.1.0</version>
+	<version>1.1.0.baozun.RELEASE</version>
 	<packaging>jar</packaging>
 
 	<name>captcha-java-sdk</name>
@@ -13,7 +13,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- log4j日志文件管理包版本 -->
 		<slf4j.version>1.6.6</slf4j.version>
-		<log4j.version>1.2.17</log4j.version>
 	</properties>
 
 	<dependencies>
@@ -70,4 +69,19 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<name>nexus-releases</name>
+			<url>http://itcentral.baozun.cn/nexus/content/repositories/releases/</url>
+		</repository>
+
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>nexus-snapshots</name>
+			<url>http://itcentral.baozun.cn/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
