--- a/captcha-java-sdk/pom.xml
+++ b/captcha-java-sdk/pom.xml
@@ -3,7 +3,8 @@
 
 	<groupId>com.touclick.captcha</groupId>
 	<artifactId>java-sdk</artifactId>
-	<version>1.1.0.baozun.RELEASE</version>
+	<!-- <version>1.1.1.baozun.RELEASE</version> -->
+	<version>1.1.1.baozun-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>captcha-java-sdk</name>
@@ -13,6 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- log4j日志文件管理包版本 -->
 		<slf4j.version>1.6.6</slf4j.version>
+		<version.commons-lang3>3.6</version.commons-lang3>
 	</properties>
 
 	<dependencies>
@@ -29,6 +31,15 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${version.commons-lang3}</version>
+			<optional>true</optional>
+		</dependency>
+
 
 		<dependency>
 			<groupId>commons-codec</groupId>
@@ -66,6 +77,22 @@
 					<target>1.6</target>
 					<encoding>UTF8</encoding>
 				</configuration>
+			</plugin>
+
+			<!-- maven-source-plugin -->
+			<plugin>
+				<inherited>true</inherited>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
