--- a/captcha-java-sdk/pom.xml
+++ b/captcha-java-sdk/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.touclick.captcha</groupId>
 	<artifactId>java-sdk</artifactId>
 	<!-- <version>1.1.1.baozun.RELEASE</version> -->
-	<version>1.1.1.baozun-SNAPSHOT</version>
+	<version>1.1.2.baozun.RELEASE</version>
 	<packaging>jar</packaging>
 
 	<name>captcha-java-sdk</name>
